--- a/GTA/index.html
+++ b/GTA/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="public/favicon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GTA VI</title>
+    <title>GTA V</title>
   </head>
   <body>
     <div id="root"></div>
